# syndgen

./: LICENSE  README.md  pyproject.toml
syndgen/: __init__.py
syndgen/datasets/: dataset.py
syndgen/datautil/: __init__.py  distributions.py
syndgen/metadata/: __init__.py  metadata.py
syndgen/models/: __init__.py  _errors.py  _warnings.py  critic.py  generator.py  residual.py  tgan.py
syndgen/processing/: __init__.py  transformer.py
