[tool.poetry]
name = "syndgen"
version = "0.1.0"
description = "SYNthetic Data GENeration made easy for everyone, free and open-sourced."
authors = [
    "Wilhelm Ågren <wilhelmagren98@gmail.com>",
]
license = "MIT"
readme = "README.md"

packages = [{ include = "syndgen" }]
homepage = "https://github.com/wilhelmagren/syndgen"
repository = "https://github.com/wilhelmagren/syndgen"

[tool.poetry.urls]
"Homepage" = "https://github.com/wilhelmagren/syndgen"
"Bug tracker" = "https://github.com/wilhelmagren/syndgen/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.1.3"
torch = { version = "^2.5.1", source = "torch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
pandas = "^2.2.3"
scipy = "^1.14.1"

[tool.poetry.group.cuda]
optional = true
[tool.poetry.group.cuda.dependencies]
torch = { version = "^2.5.1", source = "torch-cuda", markers = "extra=='cuda' and extra!='cpu'" }

[tool.poetry.extras]
cpu = [ "torch" ]
cuda = [ "torch" ]

[[tool.poetry.source]]
name = "torch-cpu"
priority = "explicit"
url = "https://download.pytorch.org/whl/cpu"

[[tool.poetry.source]]
name = "torch-cuda"
priority = "explicit"
url = "https://download.pytorch.org/whl/cu121"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]